2006-07-19  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_raw_send):
	removed.

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_raw2):
	supports packet retransmission.

2006-07-17  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-interface.c (ipmi_open_outofband):
	backported. If packet retry and timeout are 0, set to default of
	10 retries and 1000 milliseconds.

2006-07-14  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_receive,
	ipmi_lan_cmd2): backported bugfixes from main branch.

2006-07-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.h,
	libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_sendto,
	ipmi_lan_recvfrom): Fully revert changes to 0.2.1 release.
	
2006-07-12  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-ssif-interface.c (ipmi_ssif_cmd2): handles
	smaller and oversized packets.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* common/src/argp-common.c: initialize errno before calling
	strtol().

	* fish/src/scm-procedures.c (ex_string2number): like wise.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* fish/src/scm-procedures.c (ex_string2number): new function.

	* fish/src/extension.c: added fi-string->number primitive
	procedure.

	* fish/extensions/bc-common.scm, fish/extensions/bmc-info.scm,
	fish/extensions/pef.scm, fish/extensions/sensors-common.scm: uses
	fi-string->number

	* fish/extensions/sel.scm: uses fi-string->number and fixes of
	error messages.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* common/src/argp-common.c: --driver-address,
	--packet-retry-timeout and --packet-retry-max options accept arg
	value in decimal, octal and hex.  fixed bug #16291.

	* common/src/Makefile.am: updated.

2006-07-11  A Balamurugan  <bala@zresearch.com>

	* configure.ac, libfreeipmi/src/ipmi-semaphores.h: reverted back
	ipckey changes.

2006-07-11  A Balamurugan  <bala@zresearch.com>
